--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,21 @@
   pointer-events: none;
 }
 
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#reader {
+  width: 600px;
+}
+
+#result {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
